feat(documentation): add new documentation with swagger
